Wed,  7 Mar 2007 00:57:59 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py, setup.py, bin/gpodder: Clean-up and 
          small fixes to make package installation smoother

Tue,  6 Mar 2007 21:36:44 +0100 <thp@perli.net>
        * src/gpodder/liblogger.py: We're developing again - debugging on :)
        * bin/gpodder: We've got a svn version number again... (as always =)

Tue,  6 Mar 2007 21:24:06 +0100 <thp@perli.net>
        * README: ** gPodder 0.9.0 released **

Tue,  6 Mar 2007 20:55:19 +0100 <thp@perli.net>
        * doc/man/gpodder.1: Updated for 0.9.0
        * TODO: Updated for 0.9.0
        * src/gpodder/liblogger.py: Updated for 0.9.0
        * bin/gpodder: Updated for 0.9.0
        * data/messages.pot: Updated for 0.9.0
        * data/po/de.po: Updated for 0.9.0

Sat,  3 Mar 2007 14:08:18 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Added can_write_directory() function
        * src/gpodder/libipodsync.py: Add support for MP3 player cleanup
        * src/gpodder/gpodder.py: Add support for MP3 player cleanup
        * bin/gpodder: version + svn release date push

Tue, 27 Feb 2007 21:11:47 +0100 <thp@perli.net>
        * data/po/es.po: Updated Spanish translation by
          José Luis Fustel (dr_psy terra.es)
        * bin/gpodder: Version + svn release date push

Sat, 24 Feb 2007 13:02:51 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Scroll down to last position after 
          starting a download in the available podcasts tab
        * bin/gpodder: Version + svn release date push
        * TODO: Updated TODO list

Mon,  5 Feb 2007 17:47:07 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Applied patch from Mike Coulson 
          (miketcoulson gmail com) to fix lexists fallback bug related to 
          late logger import - thanks!
        * AUTHORS: Added Mike Coulson to list of patch writers
        * bin/gpodder: Pushed version + svn release date

Sun,  4 Feb 2007 10:38:27 +0100 <thp@perli.net>