@@ -1,1 +1,0 @@
-Artwork icons from http://tango-project.org/
