@@ -1,3 +1,9 @@
+Wed,  7 Mar 2007 11:53:37 +0100 <thp@perli.net>
+        * data/artwork: Removed Tango artwork
+        * src/gpodder/gpodder.py: Use artwork from current icon theme
+        * setup.py: Do not install removed artwork data
+        * bin/gpodder: Push version + release date
+
 Wed,  7 Mar 2007 00:57:59 +0100 <thp@perli.net>
         * src/gpodder/libipodsync.py, setup.py, bin/gpodder: Clean-up and 
           small fixes to make package installation smoother
